Fix params.